_sass/others.scss
/* ... */
div.footnotes {
    padding-top: 30px;
    hr {
        height: 1px;
        width: 30%;
        // Must be the same as paragraph separator vertical space
        margin-bottom: 12px;
    }
    ol {
        padding-left: 20px;
        
        li {
            font-family: $font_default_thin;
            font-size: $font_size_default - 1;
            
            p {
                font-family: $font_default_thin;
                font-size: $font_size_default - 1;
                line-height: $font_size_default + 2;
                margin-bottom: 0px;
                
                a {
                    font-family: $font_default_thin;
                    font-size: $font_size_default - 1;
                    border-bottom: none;
                }
            }
            
            em {
                font-size: $font_size_default - 1;
            }
        }
    }
}

/* ------------------------------------------------------------------------- */
/* Header and header navigation                                              */
/* ------------------------------------------------------------------------- */

header {
    background: black;
    width: 100%;
    padding: 0;
    margin: 0;
    z-index: 100;
    
    h1 {
        margin: 0;
        padding: 5px 0 0 15px;
        a {
            font-family: $font_title;
            font-size: $font_size_title;
            font-weight: normal;
            text-align: left;
            line-height: $font_size_title;
            color: $color_primary_darker;
            border: none;
            &:hover {
                border: none;
            }
        }
    }
    
    h2 {
        font-family: $font_title_tagline;
        font-weight: normal;
        font-style: italic;
        font-size: $font_size_title_tagline;
        letter-spacing: 0px;
        text-align: left;
        line-height: $font_size_title_tagline + 1;

        margin: 0;
        /* If the title changes, the top padding may need to be adjusted */
        padding: 7px 0 10px 15px;
        /* When viewed in small media, the text is displayed too close to the */
        /* vertical scrollbar so we add some padding on the right */
        padding-right: 15px;
    }
}

header div.nav_background {
    background: black;
    /* Manually adjusted if the header navigation gets taller/shorter */
    height: 31px;
}

nav {
    margin-top: 0px;
    margin-bottom: 0px;
    padding-top: 9px;
    padding-bottom: 2px;
    
    &.left {
        float: left;
        margin-left: 15px;
    }

    &.right {
        float: right;
        margin-right: 15px;
    }
    
    li {
        display: inline-block;
        margin-right: 1px;
        
        a {
            font-family: $font_label;
            font-size: $font_size_nav;
            font-weight: normal;
            color: $color_primary_darker;

            text-transform: uppercase;

            padding-top: 2px;
            padding-bottom: 3px;
            padding-left: 10px;
            padding-right: 10px;

            border-top: 3px solid black;
            border-bottom: 0px;
            
            &:hover {
                /* Remove the bottom dotted line in common link styles */
                border-bottom: 0px;
                border-top: 3px solid $color_primary;
            }
            
            &.active {
                color: black;
                background: $color_primary;
                border-top: 3px solid $color_primary;
                border-bottom: 1px solid $color_primary;
                border-radius: 3px 3px 0px 0px;
            }
        }
    }
    
    &.navbar {
        background: $color_nav_bg;
        padding: 0;
        margin: 0;
        border-top: 4px solid $color_primary;
        border-bottom: 1px solid $color_lbg;
        height: 25px;
        
        // Hide the horizontal bar for now
        border-bottom: 0px;
        height: 0px;
        
        p {
            margin-bottom: 0;
        }
    }
}

/* ------------------------------------------------------------------------- */
/* Columns                                                                   */
/* ------------------------------------------------------------------------- */

section.column_left_sidebar,
section.column_main,
section.column_right_sidebar {
    float: left;

    font-family: $font_default;
    margin-top: 17px;
    margin-left: 15px;
    margin-right: 15px;
    margin-bottom: 20px;
}

section.column_left_sidebar {
    width: 20%
}
section.column_main {
    //width: 47%;
    width: 51%;
}
section.column_right_sidebar {
    //width: 23%;
    width: 20%;

    border-radius: 3px;
    background: #1a1a1a;
    padding: 12px 15px 15px 15px;
}

/* Media screen sizes */
/* https://css-tricks.com/snippets/css/media-queries-for-standard-devices/ */
@media print, screen and (max-width: 1280px) {
    section[class="column_left_sidebar"] { width: 23%; }
    section[class="column_main"] { width: 44%; }
    section[class="column_right_sidebar"] { width: 23%; }
}

@media print, screen and (max-width: 1024px) {
    section[class="column_left_sidebar"] { width: 30%; }
    section[class="column_main"] { width: 62%; }
    section[class="column_right_sidebar"] { width: 92%; }
}

/* Intermediate transition */
/* Expand the main column only */
@media print, screen and (max-width: 850px) {
    section[class="column_left_sidebar"] { width: 30%; }
    section[class="column_main"] { width: 62%; }
    section[class="column_right_sidebar"] { width: 92%; }
}

@media print, screen and (max-width: 749px) {
    section[class="column_left_sidebar"] { width: 30%; }
    section[class="column_main"] { width: 60%; }
    section[class="column_right_sidebar"] { width: 92%; }
}

@media print, screen and (max-width: 720px) {
    section[class="column_left_sidebar"] { width: 93%; }
    section[class="column_main"] { width: 93%; }
    section[class="column_right_sidebar"] { width: 86%; }
}
/* ... */

